--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Ruota Multiplayer – Turni, Punteggi & Ruota (test)</title>
+  <title>Ruota Multiplayer – Test turni, punteggi e ruota</title>
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
   <style>
     body {
       font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
@@ -13,7 +14,7 @@
       color: #f5f5f5;
     }
     main {
-      max-width: 900px;
+      max-width: 960px;
       margin: 0 auto;
     }
     h1, h2, h3 {
@@ -24,7 +25,7 @@
       margin-bottom: 1.5rem;
       padding: 1rem;
       border-radius: 0.5rem;
-      background: rgba(0,0,0,0.2);
+      background: rgba(0,0,0,0.25);
     }
     label {
       display: block;
@@ -58,23 +59,27 @@
     }
     .small {
       font-size: 0.9rem;
-      opacity: 0.8;
+      opacity: 0.85;
     }
-    #status {
-      margin-top: 0.5rem;
-      min-height: 1.2rem;
+    .sr-only {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      padding: 0;
+      margin: -1px;
+      overflow: hidden;
+      clip: rect(0, 0, 0, 0);
+      white-space: nowrap;
+      border: 0;
     }
   </style>
-  <!-- Supabase JS dal CDN -->
-  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
   <main>
-    <h1>Ruota Multiplayer – Turni, Punteggi & Ruota (test)</h1>
+    <h1>Ruota Multiplayer – Test turni, punteggi e ruota</h1>
     <p>
-      Ora testiamo una logica più vicina al gioco vero: <strong>turni</strong>,
-      <strong>punteggi</strong> e una <strong>ruota di prova</strong> con caselle
-      tipo “+200 punti”, “Perdi tutto”, “Perdi il turno”, sincronizzate tra tutti.
+      Questa pagina è SOLO un test del multiplayer: giocatori, turni, punteggi e una
+      <strong>ruota di prova</strong> condivisa via Supabase. Niente grafica, solo logica.
     </p>
 
     <section aria-labelledby="sec-conn">
@@ -90,11 +95,12 @@
       <button id="joinRoomBtn">Entra in stanza esistente</button>
 
       <p class="small">
-        Suggerimento: apri questa pagina da due dispositivi diversi, usa lo stesso codice stanza
-        e verifica che turni, punteggi e risultato della ruota siano uguali per tutti.
+        Per provare: apri questa pagina da due dispositivi, usa lo stesso codice stanza
+        e verifica che turni, punteggi e ruota siano uguali per tutti.
       </p>
 
       <div id="status" aria-live="polite"></div>
+      <div id="sr-updates" class="sr-only" aria-live="polite"></div>
     </section>
 
     <section aria-labelledby="sec-room">
@@ -102,49 +108,45 @@
       <p id="currentRoomLabel">Nessuna stanza ancora collegata.</p>
 
       <h3>Giocatori collegati</h3>
-      <ul id="playersList" aria-live="polite"></ul>
+      <ul id="playersList"></ul>
 
       <h3>Turno corrente</h3>
-      <p>
-        Sta giocando: <strong id="currentTurnLabel">–</strong>
-      </p>
+      <p>Sta giocando: <strong id="currentTurnLabel">–</strong></p>
 
       <h3>Tabellone punteggi (test)</h3>
-      <ul id="scoresList" aria-live="polite"></ul>
+      <ul id="scoresList"></ul>
 
       <h3>Ultima casella ruota (test)</h3>
-      <p id="lastSpinLabel" aria-live="polite">–</p>
+      <p id="lastSpinLabel">–</p>
 
-      <h3>Azioni di prova (simulano il gioco)</h3>
+      <h3>Azioni di prova</h3>
       <button id="spinWheelBtn" disabled>Gira la ruota (test)</button>
       <button id="addPointsBtn" disabled>Aggiungi 100 punti a me (test)</button>
       <button id="nextTurnBtn" disabled>Passa il turno al prossimo giocatore</button>
 
       <h3>Log eventi (test)</h3>
-      <ul id="logList" aria-live="polite"></ul>
+      <ul id="logList"></ul>
 
       <p class="small">
-        Questi pulsanti servono solo per testare la sincronizzazione:
-        nella versione finale verranno sostituiti dalle azioni vere della Ruota
-        (gira la ruota, indovina consonante, compra vocale, ecc.).
+        Se questo test funziona, qui poi metteremo la logica completa della Ruota
+        (consonanti, vocali, frase, ecc.) usando lo stesso stato condiviso.
       </p>
     </section>
   </main>
 
   <script>
-    // === CONFIGURAZIONE SUPABASE (usa il tuo progetto già creato) ===
     const SUPABASE_URL = "https://azcwkpdjbysnivknnino.supabase.co";
     const SUPABASE_ANON_KEY =
       "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImF6Y3drcGRqYnlzbml2a25uaW5vIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjM2MzAwNDksImV4cCI6MjA3OTIwNjA0OX0.R8wkMJEmsP8cTVUUOcWtD4Rrg_ZhuOE-PYBJ56eGqMU";
 
     const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
 
-    // === RIFERIMENTI DOM ===
     const playerNameInput = document.getElementById("playerName");
     const roomCodeInput = document.getElementById("roomCode");
     const createRoomBtn = document.getElementById("createRoomBtn");
     const joinRoomBtn = document.getElementById("joinRoomBtn");
     const statusEl = document.getElementById("status");
+    const srUpdatesEl = document.getElementById("sr-updates");
     const currentRoomLabel = document.getElementById("currentRoomLabel");
     const playersList = document.getElementById("playersList");
     const currentTurnLabel = document.getElementById("currentTurnLabel");
@@ -159,8 +161,8 @@
     let currentPlayerName = null;
     let currentState = null;
     let realtimeChannel = null;
+    let lastAnnouncedLogCount = 0;
 
-    // Ruota di TEST: semplificata, per provare punteggi e turni
     const TEST_WHEEL_SEGMENTS = [
       { type: "money", value: 100, label: "+100 punti" },
       { type: "money", value: 200, label: "+200 punti" },
@@ -172,6 +174,10 @@
     function setStatus(text) {
       console.log(text);
       statusEl.textContent = text;
+    }
+
+    function announceForScreenReader(text) {
+      srUpdatesEl.textContent = text;
     }
 
     function normalizzaCodiceRoom(raw) {
@@ -193,17 +199,14 @@
       if (typeof state.currentPlayerIndex !== "number") state.currentPlayerIndex = 0;
       if (!state.scores || typeof state.scores !== "object") state.scores = {};
       if (typeof state.lastSpin !== "string") state.lastSpin = "Nessuna";
-
       if (!Array.isArray(state.log)) state.log = [];
 
-      // Garantisce che ogni giocatore abbia una voce in scores
       state.players.forEach((name) => {
         if (typeof state.scores[name] !== "number") {
           state.scores[name] = 0;
         }
       });
 
-      // Normalizza currentPlayerIndex se fuori range
       if (state.players.length === 0) {
         state.currentPlayerIndex = 0;
       } else if (
@@ -218,7 +221,6 @@
 
     function appendLogEntry(state, text) {
       state.log.push(text);
-      // Limitiamo il log alle ultime 10 righe per non farlo crescere all'infinito
       if (state.log.length > 10) {
         state.log = state.log.slice(state.log.length - 10);
       }
@@ -235,15 +237,15 @@
         spinWheelBtn.disabled = true;
         addPointsBtn.disabled = true;
         nextTurnBtn.disabled = true;
+        lastAnnouncedLogCount = 0;
         return;
       }
 
-      // Rimodella lo stato se mancano campi (utile per vecchie stanze)
       currentState = ensureStateShape(currentState);
 
-      currentRoomLabel.textContent = "Stanza " + currentRoomId + " – giocatore: " + currentPlayerName;
+      currentRoomLabel.textContent =
+        "Stanza " + currentRoomId + " – giocatore: " + currentPlayerName;
 
-      // Giocatori
       playersList.innerHTML = "";
       currentState.players.forEach((name) => {
         const li = document.createElement("li");
@@ -251,7 +253,6 @@
         playersList.appendChild(li);
       });
 
-      // Turno corrente
       let currentTurnName = "–";
       if (
         currentState.players.length > 0 &&
@@ -263,19 +264,19 @@
       }
       currentTurnLabel.textContent = currentTurnName;
 
-      // Punteggi
       scoresList.innerHTML = "";
       currentState.players.forEach((name) => {
         const li = document.createElement("li");
-        const score = typeof currentState.scores[name] === "number" ? currentState.scores[name] : 0;
+        const score =
+          typeof currentState.scores[name] === "number"
+            ? currentState.scores[name]
+            : 0;
         li.textContent = name + ": " + score + " punti";
         scoresList.appendChild(li);
       });
 
-      // Ultima casella ruota
       lastSpinLabel.textContent = currentState.lastSpin || "Nessuna";
 
-      // Log eventi
       logList.innerHTML = "";
       currentState.log.forEach((entry) => {
         const li = document.createElement("li");
@@ -283,9 +284,15 @@
         logList.appendChild(li);
       });
 
-      // Abilita pulsanti solo se sei dentro una stanza
+      if (currentState.log.length > lastAnnouncedLogCount) {
+        const lastEntry = currentState.log[currentState.log.length - 1];
+        announceForScreenReader(lastEntry);
+        lastAnnouncedLogCount = currentState.log.length;
+      }
+
       const inRoom = !!currentRoomId && !!currentPlayerName;
       const hasPlayers = currentState.players.length > 0;
+
       spinWheelBtn.disabled = !inRoom || !hasPlayers;
       addPointsBtn.disabled = !inRoom;
       nextTurnBtn.disabled = !inRoom || !hasPlayers;
@@ -311,7 +318,6 @@
     }
 
     async function salvaStato(roomId, newState) {
-      // Prima assicuriamoci che la struttura sia coerente
       newState = ensureStateShape(newState);
 
       const { error } = await supabase
@@ -328,7 +334,6 @@
         return false;
       }
 
-      // Dopo aver salvato, manda un broadcast in tempo reale (se il canale è attivo su questo client)
       if (realtimeChannel) {
         realtimeChannel.send({
           type: "broadcast",
@@ -348,7 +353,8 @@
         return;
       }
       currentPlayerName = rawName;
-      const roomId = normalizzaCodiceRoom(roomCodeInput.value) || generaCodiceRoom();
+      const roomId =
+        normalizzaCodiceRoom(roomCodeInput.value) || generaCodiceRoom();
 
       const initialState = {
         createdAt: new Date().toISOString(),
@@ -356,7 +362,7 @@
         currentPlayerIndex: 0,
         scores: { [currentPlayerName]: 0 },
         lastSpin: "Nessuna",
-        log: ["Stanza creata da " + currentPlayerName]
+        log: ["Stanza creata da " + currentPlayerName],
       };
 
       const { error } = await supabase.from("rooms").insert({
@@ -366,7 +372,9 @@
 
       if (error) {
         if (error.code === "23505") {
-          setStatus("Esiste già una stanza con questo codice. Prova a usare 'Entra in stanza'.");
+          setStatus(
+            "Esiste già una stanza con questo codice. Usa 'Entra in stanza'."
+          );
         } else {
           console.error(error);
           setStatus("Errore nel creare la stanza: " + error.message);
@@ -375,14 +383,14 @@
       }
 
       currentRoomId = roomId;
-      // Attiva subito il canale realtime per la stanza appena creata
+      lastAnnouncedLogCount = 0;
       attivaRealtimePerStanza(roomId);
 
-      // ricarica stato dal DB per avere quello reale
       const data = await caricaStanza(roomId);
       currentState = data?.state || initialState;
 
       setStatus("Stanza " + roomId + " creata. Ora sei collegata.");
+      announceForScreenReader("Stanza " + roomId + " creata. Sei il primo giocatore.");
       roomCodeInput.value = roomId;
       renderState();
     }
@@ -402,15 +410,13 @@
       }
       currentPlayerName = rawName;
 
-      // 1. Verifica che la stanza esista
       const data = await caricaStanza(roomId);
       if (!data) return;
 
-      // 2. Imposta stanza corrente e attiva SUB realtime PRIMA di aggiornare i giocatori
       currentRoomId = roomId;
+      lastAnnouncedLogCount = 0;
       attivaRealtimePerStanza(roomId);
 
-      // 3. Aggiorna elenco giocatori e scores se non presente
       let state = data.state || {};
       state = ensureStateShape(state);
 
@@ -426,8 +432,8 @@
       if (!ok) return;
 
       currentState = state;
-
       setStatus("Sei entrata nella stanza " + roomId + ".");
+      announceForScreenReader("Sei entrata nella stanza " + roomId + ".");
       renderState();
     }
 
@@ -437,7 +443,6 @@
         realtimeChannel = null;
       }
 
-      // Usa i broadcast Realtime, non le modifiche Postgres
       realtimeChannel = supabase
         .channel("room-" + roomId, {
           config: {
@@ -450,12 +455,13 @@
           console.log("Broadcast realtime", payload);
           if (!currentRoomId) return;
 
-          // ogni volta che arriva un broadcast, ricarichiamo lo stato dal DB
           const data = await caricaStanza(currentRoomId);
           if (data && data.state) {
             currentState = data.state;
             renderState();
-            setStatus("Stato aggiornato in tempo reale dalla stanza " + currentRoomId + ".");
+            setStatus(
+              "Stato aggiornato in tempo reale dalla stanza " + currentRoomId + "."
+            );
           }
         })
         .subscribe((status) => {
@@ -477,6 +483,9 @@
       currentState.lastSpin = "Bonus manuale +100 punti a " + currentPlayerName;
       const ok = await salvaStato(currentRoomId, currentState);
       if (!ok) return;
+      announceForScreenReader(
+        currentPlayerName + " ora ha " + currentState.scores[currentPlayerName] + " punti."
+      );
       renderState();
     }
 
@@ -485,17 +494,20 @@
       currentState = ensureStateShape(currentState);
       if (currentState.players.length === 0) return;
       const prevName =
-        currentState.players[currentState.currentPlayerIndex] || "Giocatore sconosciuto";
+        currentState.players[currentState.currentPlayerIndex] ||
+        "Giocatore sconosciuto";
       currentState.currentPlayerIndex =
         (currentState.currentPlayerIndex + 1) % currentState.players.length;
       const newName =
-        currentState.players[currentState.currentPlayerIndex] || "Giocatore sconosciuto";
+        currentState.players[currentState.currentPlayerIndex] ||
+        "Giocatore sconosciuto";
       appendLogEntry(
         currentState,
         "Il turno passa da " + prevName + " a " + newName + "."
       );
       const ok = await salvaStato(currentRoomId, currentState);
       if (!ok) return;
+      announceForScreenReader("Ora è il turno di " + newName + ".");
       renderState();
     }
 
@@ -505,10 +517,14 @@
       if (currentState.players.length === 0) return;
 
       const currentName =
-        currentState.players[currentState.currentPlayerIndex] || currentPlayerName || "Giocatore";
+        currentState.players[currentState.currentPlayerIndex] ||
+        currentPlayerName ||
+        "Giocatore";
 
-      // Estrai una casella casuale dalla ruota di test
-      const seg = TEST_WHEEL_SEGMENTS[Math.floor(Math.random() * TEST_WHEEL_SEGMENTS.length)];
+      const seg =
+        TEST_WHEEL_SEGMENTS[
+          Math.floor(Math.random() * TEST_WHEEL_SEGMENTS.length)
+        ];
 
       let logEntry = currentName + " gira la ruota: " + seg.label + ".";
 
@@ -517,17 +533,34 @@
           currentState.scores[currentName] = 0;
         }
         currentState.scores[currentName] += seg.value;
-        logEntry += " Nuovo punteggio: " + currentState.scores[currentName] + " punti.";
+        logEntry +=
+          " Nuovo punteggio: " + currentState.scores[currentName] + " punti.";
+        announceForScreenReader(
+          currentName +
+            " ottiene " +
+            seg.value +
+            " punti. Totale " +
+            currentState.scores[currentName] +
+            " punti."
+        );
       } else if (seg.type === "bankrupt") {
         currentState.scores[currentName] = 0;
         logEntry += " Il punteggio di " + currentName + " torna a 0.";
+        announceForScreenReader(
+          seg.label + " Il punteggio di " + currentName + " torna a zero."
+        );
       } else if (seg.type === "loseTurn") {
-        // Passa direttamente il turno al prossimo
         currentState.currentPlayerIndex =
           (currentState.currentPlayerIndex + 1) % currentState.players.length;
         const newName =
-          currentState.players[currentState.currentPlayerIndex] || "Giocatore sconosciuto";
+          currentState.players[currentState.currentPlayerIndex] ||
+          "Giocatore sconosciuto";
         logEntry += " Il turno passa a " + newName + ".";
+        announceForScreenReader(
+          seg.label + " Ora è il turno di " + newName + "."
+        );
+      } else {
+        announceForScreenReader(seg.label);
       }
 
       currentState.lastSpin = seg.label;
@@ -538,7 +571,6 @@
       renderState();
     }
 
-    // === EVENT LISTENERS ===
     createRoomBtn.addEventListener("click", () => {
       creaNuovaStanza();
     });
@@ -559,7 +591,6 @@
       giraRuotaTest();
     });
 
-    // Messaggio iniziale
     setStatus("Inserisci il tuo nome e un codice stanza per iniziare.");
   </script>
 </body>
